--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express-rate-limit": "^2.9.0",
     "express-session": "^1.17.1",
     "express-ws": "^3.0.0",
+    "form-data": "^4.0.0",
     "futoin-hkdf": "^1.0.2",
     "got": "^7.1.0",
     "graphql": "^15.5.0",
