--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "Unlicense",
   "author": "Lamassu (https://lamassu.is)",
   "dependencies": {
+    "@bitgo/utxo-lib": "^7.3.0",
     "@ethereumjs/common": "^2.6.4",
     "@ethereumjs/tx": "^3.5.1",
     "@graphql-tools/merge": "^6.2.5",
@@ -19,6 +20,7 @@
     "base-x": "3.0.9",
     "base64url": "^3.0.1",
     "bchaddrjs": "^0.3.0",
+    "bigi": "^1.4.2",
     "bignumber.js": "9.0.1",
     "bip39": "^2.3.1",
     "bitcoind-rpc": "^0.7.0",
@@ -33,6 +35,7 @@
     "date-fns": "^2.26.0",
     "date-fns-tz": "^1.1.6",
     "dotenv": "^16.0.0",
+    "ecurve": "^1.0.6",
     "ethereumjs-tx": "^1.3.3",
     "ethereumjs-util": "^5.2.0",
     "ethereumjs-wallet": "^0.6.3",
@@ -75,8 +78,10 @@
     "promise-sequential": "^1.1.1",
     "queue-promise": "^2.2.1",
     "request-promise": "^4.2.6",
+    "secp256k1": "^4.0.3",
     "semver": "^7.1.3",
     "serve-static": "^1.12.4",
+    "sjcl": "^1.0.8",
     "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
     "talisman": "^0.20.0",
