--- a/new-lamassu-admin/package.json
+++ b/new-lamassu-admin/package.json
@@ -92,9 +92,7 @@
     "analyze": "source-map-explorer 'build/static/js/*.js'",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "patch-package",
-    "lamassu": "REACT_APP_BUILD_TARGET=LAMASSU react-scripts start",
-    "pazuz": "REACT_APP_BUILD_TARGET=PAZUZ react-scripts start"
+    "postinstall": "patch-package"
   },
   "browserslist": {
     "production": [
