--- a/new-lamassu-admin/package.json
+++ b/new-lamassu-admin/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@lamassu/coins": "v1.5.1",
-    "@material-ui/core": "4.11.0",
-    "@material-ui/icons": "4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/core": "4.12.4",
+    "@material-ui/icons": "4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@simplewebauthn/browser": "^3.0.0",
     "@use-hooks/axios": "1.3.0",
     "apollo-cache-inmemory": "^1.6.6",
@@ -41,7 +41,7 @@
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.10.2",
     "react-dropzone": "^11.4.2",
-    "react-material-ui-carousel": "^2.2.7",
+    "react-material-ui-carousel": "^2.3.11",
     "react-number-format": "^4.4.1",
     "react-otp-input": "^2.3.0",
     "react-router-dom": "5.1.2",
@@ -78,10 +78,11 @@
     "vite": "^6.0.1",
     "vite-plugin-svgr": "^4.3.0"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "scripts": {
     "start": "vite --force",
