--- a/new-lamassu-admin/package.json
+++ b/new-lamassu-admin/package.json
@@ -2,6 +2,7 @@
   "name": "lamassu-admin",
   "version": "0.2.1",
   "license": "../LICENSE",
+  "type": "module",
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@lamassu/coins": "v1.5.1",
@@ -66,12 +67,9 @@
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
-    "patch-package": "^6.2.2",
     "prettier": "1.19.1",
     "prettier-config-standard": "^1.0.1",
     "react-scripts": "4.0.0",
-    "serve": "^11.3.2",
-    "source-map-explorer": "^2.4.2",
     "vite": "^6.0.1",
     "vite-plugin-svgr": "^4.3.0"
   },
@@ -82,12 +80,10 @@
     ]
   },
   "scripts": {
-    "start": "vite --force",
+    "start": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "fix": "eslint --fix --ext .js,.md,.json src/",
-    "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "postinstall": "patch-package"
+    "fix": "eslint --fix --ext .js,.md,.json src/"
   },
   "browserslist": {
     "production": [
