--- a/new-lamassu-admin/package.json
+++ b/new-lamassu-admin/package.json
@@ -52,23 +52,14 @@
     "yup": "1.4.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "esbuild-plugin-react-virtualized": "^1.0.4",
-    "eslint": "^7.19.0",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-config-prettier-standard": "^3.0.1",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-standard": "^4.0.1",
+    "eslint": "^9.16.0",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.13.0",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
-    "prettier": "1.19.1",
-    "prettier-config-standard": "^1.0.1",
     "react-scripts": "4.0.0",
     "vite": "^6.0.1",
     "vite-plugin-svgr": "^4.3.0"
