--- a/new-lamassu-admin/package.json
+++ b/new-lamassu-admin/package.json
@@ -57,6 +57,7 @@
     "esbuild-plugin-react-virtualized": "^1.0.4",
     "eslint": "^9.16.0",
     "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-compiler": "^19.0.0-beta-df7b47d-20241124",
     "globals": "^15.13.0",
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
