--- a/new-lamassu-admin/package.json
+++ b/new-lamassu-admin/package.json
@@ -56,26 +56,19 @@
     "@vitejs/plugin-react-swc": "^3.7.2",
     "esbuild-plugin-react-virtualized": "^1.0.4",
     "eslint": "^9.16.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-compiler": "^19.0.0-beta-df7b47d-20241124",
     "globals": "^15.13.0",
-    "husky": "^3.1.0",
-    "lint-staged": "^9.5.0",
-    "react-scripts": "4.0.0",
+    "lint-staged": "^15.2.10",
+    "prettier": "3.4.1",
     "vite": "^6.0.1",
     "vite-plugin-svgr": "^4.3.0"
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
-      "eslint --fix",
-      "git add"
-    ]
   },
   "scripts": {
     "start": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "fix": "eslint --fix --ext .js,.md,.json src/"
+    "preview": "vite preview"
   },
   "browserslist": {
     "production": [
@@ -88,5 +81,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "lint-staged": {
+    "*.{js,jsx,md,json}": "eslint --cache --fix",
+    "*.{js,jsx,css,md,json}": "prettier --write"
   }
 }
